// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should accept a custom name formatter 1`] = `
<ForwardRef>
  <p>
    The 'cool name' Report will be permanently deleted.
  </p>
  <p>
    <b>
      Warning: This action cannot be undone.
    </b>
  </p>
</ForwardRef>
`;

exports[`should not render anything when no entity is set 1`] = `""`;

exports[`should show the confirmation modal when entity is set 1`] = `
<Modal
  className="Deleter"
  onClose={[Function]}
  onConfirm={[Function]}
  open={true}
>
  <ForwardRef(ModalHeader)
    buttonOnClick={[Function]}
    closeModal={[Function]}
    iconDescription="Close"
  >
    Delete Report
  </ForwardRef(ModalHeader)>
  <ForwardRef>
    <p>
      The 'Doomed Report' Report will be permanently deleted.
    </p>
    <p>
      <b>
        Warning: This action cannot be undone.
      </b>
    </p>
  </ForwardRef>
  <ForwardRef(ModalFooter)
    closeModal={[Function]}
    onRequestClose={[Function]}
    onRequestSubmit={[Function]}
  >
    <Button
      className="close"
      disabled={false}
      kind="secondary"
      onClick={[Function]}
    >
      Cancel
    </Button>
    <Button
      className="confirm"
      disabled={false}
      kind="danger"
      onClick={[Function]}
    >
      Delete Report
    </Button>
  </ForwardRef(ModalFooter)>
</Modal>
`;

exports[`should use provided delete text for title and button 1`] = `
<Modal
  className="Deleter"
  onClose={[Function]}
  onConfirm={[Function]}
  open={true}
>
  <ForwardRef(ModalHeader)
    buttonOnClick={[Function]}
    closeModal={[Function]}
    iconDescription="Close"
  >
    Remove entity
  </ForwardRef(ModalHeader)>
  <ForwardRef>
    <p>
      The 'Doomed Report' Report will be permanently deleted.
    </p>
    <p>
      <b>
        Warning: This action cannot be undone.
      </b>
    </p>
  </ForwardRef>
  <ForwardRef(ModalFooter)
    closeModal={[Function]}
    onRequestClose={[Function]}
    onRequestSubmit={[Function]}
  >
    <Button
      className="close"
      disabled={false}
      kind="secondary"
      onClick={[Function]}
    >
      Cancel
    </Button>
    <Button
      className="confirm"
      disabled={false}
      kind="danger"
      onClick={[Function]}
    >
      Remove entity
    </Button>
  </ForwardRef(ModalFooter)>
</Modal>
`;
